fixed favicon, and logo, and made it default to dark mode

--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -9211,7 +9211,7 @@ Header Styles
 }
 
     .axil-header .logo a img {
-        max-height: 37px;
+        max-height: 500px;
     }
 
 /*------------------------
