--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,3 +59,7 @@ body {
     color: darkgray !important;
     border-color: lightgray;
 }
+
+.axil-header .logo a img {
+    min-height: 100px !important;
+}
